fix(SUP-38245): The player seek scrubber thumbnail not showing inconsistently  on some browsers (#781)
### Description of the Changes

solves SUP-38245

--- a/src/components/seekbar-preview/seekbar-preview.scss
+++ b/src/components/seekbar-preview/seekbar-preview.scss
@@ -4,7 +4,7 @@
     border-radius: 4px;
 
     .frame-preview-img {
-      background-size: auto 100%;
+      background-size: auto 100% !important;
       width: 100%;
       height: 100%;
       position: relative;
